# GetBlunted

./: .gitignore  CMakeLists.txt  README.md
data/: blunted.gfa  diploid_case_a.gfa  diploid_case_b.gfa  diploid_case_c.gfa  diploid_case_d.gfa  incomplete_table.txt  loop_hard.gfa  memory_error_subset.gfa  overlapping_overlaps.gfa  overlapping_overlaps_flanking_biclique.gfa  overlapping_overlaps_gap.gfa  reversing.gfa  reversing_hard.gfa  reversing_table.txt  simple.gfa  simple_table.txt  staggered_overlap.gfa  test_cigar.gfa  unbalanced_bipartition.gfa
data/test/: adjacency_error_subset_trimmed.gfa  diploid_case_a.gfa  diploid_case_b.gfa  git_issue_35.gfa  loop.gfa  loop_hard.gfa  oo_length_error_subset_small.gfa  overlapping_overlaps.gfa  overlapping_overlaps_flanking_biclique.gfa  overlapping_overlaps_flanking_biclique_less_reversal.gfa  overlapping_overlaps_full_node.gfa  overlapping_overlaps_issue_37.gfa  provenance_error_subset.gfa  provenance_error_subset_2.gfa  provenance_error_subset_3_radius-20_trimmed.gfa  provenance_error_subset_4_trimmed.gfa  reversing.gfa  reversing_with_mismatches.gfa  simple.gfa  simple_mismatch.gfa  staggered_overlap.gfa  synthetic2.gfa
inc/: Adjacency-Component.hpp  AdjacencyComponent.hpp  Biclique.hpp  BicliqueCover.hpp  Bipartite-Graph.hpp  BipartiteGraph.hpp  Bluntifier.hpp  Cigar.hpp  Duplicator.hpp  GaloisLattice.hpp  IncrementalIdMap.hpp  NodeInfo.hpp  OverlapAligner.hpp  OverlapMap.hpp  OverlappingOverlap.cpp  OverlappingOverlap.hpp  OverlappingOverlapSplicer.cpp  OverlappingOverlapSplicer.hpp  Pileup.hpp  PileupGenerator.hpp  ReducedDualGraph.hpp  Splicer.hpp  Subgraph.hpp  VertexColoring.hpp  a.hpp  adjacencyComponent.hpp  adjacency_components.hpp  align.hpp  apply_bulk_modifications.hpp  bicliqueCover.hpp  biclique_cover.hpp  bipartiteGraph.hpp  canonicalize.cpp  canonicalize.hpp  copy_graph.hpp  duplicate_terminus.hpp  find_tips.hpp  gfa_to_handle.hpp  handle_to_gfa.hpp  is_single_stranded.hpp  (+5 more)
scripts/: generate_gfa.py  run_tests.py  validate_bluntification.py
src/: AdjacencyComponent.cpp  Biclique.cpp  BicliqueCover.cpp  BipartiteGraph.cpp  Bluntifier.cpp  BluntifierAlign.cpp  Cigar.cpp  Duplicator.cpp  GaloisLattice.cpp  IncrementalIdMap.cpp  NodeInfo.cpp  OverlapAligner.cpp  OverlapMap.cpp  OverlappingOverlap.cpp  OverlappingOverlapSplicer.cpp  Pileup.cpp  PileupGenerator.cpp  ReducedDualGraph.cpp  Splicer.cpp  Subgraph.cpp  SubtractiveHandleGraph.cpp  VertexColoring.cpp  adjacencyComponent.cpp  adjacency_components.cpp  align.cpp  apply_bulk_modifications.cpp  bicliqueCover.cpp  biclique_cover.cpp  bipartiteGraph.cpp  copy_graph.cpp  duplicate_terminus.cpp  find_tips.cpp  gfa_to_handle.cpp  handle_to_gfa.cpp  is_single_stranded.cpp  subtractiveHandleGraph.cpp  subtractive_graph.cpp  topological_sort.cpp  traverse.cpp  unchop.cpp  (+1 more)
src/executable/: bluntify.cpp  extract_subgraph.cpp  get_blunted.cpp
src/test/: test_AdjacencyComponent.cpp  test_BicliqueCover.cpp  test_IncrementalIdMap.cpp  test_VertexColoring.cpp  test_abPOA.cpp  test_abpoa.cpp  test_adjacency_components.cpp  test_bdsg.cpp  test_cigar.cpp  test_divide_handle.cpp  test_duplicate_terminus.cpp  test_gfak.cpp  test_handle_to_gfa.cpp  test_handlegraph.cpp  test_harmonize_biclique.cpp  test_kalign.cpp  test_map_range_methods.cpp  test_overlaps.cpp  test_seqan.cpp  test_spoa.cpp  test_utility.cpp
